--- a/web/index.html
+++ b/web/index.html
@@ -14,24 +14,24 @@
 		width: 50%;
 		height : 50px;
 		margin: 50px auto;
-		padding: 10px 30px;
+		padding: 10px 20px;
 		display: flex; 
 		align-items: center; /* 垂直居中 */  
 		border-radius: 4px;
 		border: 1px solid #ebeef5;
-		box-shadow: 0 2px 12px 0 rgba(0,0,0,.1);
+		box-shadow: 0 2px 12px 0 rgba(0,0,0,.2);
 		color: #303133;
 	}
 	.inputBox {
-		width: 85%;
+		width: 90%;
 		height :60%;
-		margin: 1%;
 		padding : 0px 10px;
 	}
 	.assignValue_button{
 		width: 10%;
 		height :70%;
-
+		min-width:55px;
+		
 		font-size: 120%;
 
 		border: none;
